Update menu images with new URLs

--- a/HTML Restaurant Project.html
+++ b/HTML Restaurant Project.html
@@ -88,19 +88,19 @@
             <h2>Menu</h2>
 
             <article>
-                <img src="https://images.unsplash.com/photo-1606756790138-8c3f3f3f3f3f" alt="Star Burger">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMhB2TCa-zwQYQLZGOfqRvM7aol_L_bKgIzw&s" alt="Star Burger">
                 <h3>Starship Burger</h3>
                 <p>A juicy beef patty topped with cosmic cheddar and meteor onions. <i>$12.99</i></p>
             </article>
 
             <article>
-                <img src="https://images.unsplash.com/photo-1553621042-f6e147245754" alt="Galaxy Pizza">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtOXctGzdaWVAm0j0lkL--QgUS8cVfjSOyEw&s">
                 <h3>Galaxy Slice Pizza</h3>
                 <p>Fresh mozzarella, nebula tomato sauce, and stardust herbs baked to perfection. <i>$9.49</i></p>
             </article>
 
             <article>
-                <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" alt="Cosmic Shake">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0KKH-jVeK4YWVI6x04VIFpBRPsN7gFiBdMQ&s" alt="Cosmic Shake">
                 <h3>Cosmic Chocolate Shake</h3>
                 <p>A rich, creamy shake infused with dark matter cocoa. <i>$5.99</i></p>
             </article>
