Add placeholder to special requests textarea

--- a/HTML Restaurant Project.html
+++ b/HTML Restaurant Project.html
@@ -146,7 +146,7 @@
 
 
                 <label for="special-requests">Special Requests:</label>
-                <textarea id="special-requests" name="special-requests" rows="4" cols="40"></textarea>
+                <textarea id="special-requests" name="special-requests" rows="4" cols="40" placeholder="Special Requests"></textarea>
 
 
                 <input type="submit" value="Go To Checkout">
