Add alt text to pizza image
Added alt text for the Galaxy Slice Pizza image.

--- a/HTML Restaurant Project.html
+++ b/HTML Restaurant Project.html
@@ -94,7 +94,7 @@
             </article>
 
             <article>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtOXctGzdaWVAm0j0lkL--QgUS8cVfjSOyEw&s">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtOXctGzdaWVAm0j0lkL--QgUS8cVfjSOyEw&s" alt="Galatic Pizza">
                 <h3>Galaxy Slice Pizza</h3>
                 <p>Fresh mozzarella, nebula tomato sauce, and stardust herbs baked to perfection. <i>$9.49</i></p>
             </article>
